--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,10 @@
-sources = mfg_test.c 
+sources_mfg = mfg_test.c
 
-headers = 
+sources_fbimage = fbimage.c
+
+headers_mfg = 
+
+headers_fbimage = 
 
 CFLAGS=-Wall
 
@@ -10,12 +14,16 @@ else
 	DEBUG = -O2
 endif
 
-all: mfg-test
+all: mfg-test fbimage
 
-mfg-test: $(sources) $(headers)
-	$(CC) -DSIO_VERSION='"$(APP_VERSION)"' $(CFLAGS) $(LDFLAGS) $(DEBUG) -o $@ $(sources)
+mfg-test: $(sources_mfg) $(headers_mfg)
+	$(CC) -DAPP_VERSION='"$(APP_VERSION)"' $(CFLAGS) $(LDFLAGS) $(DEBUG) -o $@ $(sources_mfg)
+
+fbimage: $(sources_fbimage) $(headers_fbimage)
+	$(CC) -DAPP_VERSION='"$(APP_VERSION)"' $(CFLAGS) $(LDFLAGS) $(DEBUG) -o $@ $(sources_fbimage)
+
 
 clean:
-	$(RM) mfg-test
+	$(RM) mfg-test fbimage
 
 .PHONY: all clean
