Make this more buildroot friendly
Using the i2c-dev headers is different in all build environments.
So, we will add the header to our source code. The header is copied
from i2c-tools.

Signed-off-by: Jeff Horn <jeff@everlook.net>

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,6 +4,8 @@ headers =
 
 CFLAGS=-Wall
 
+INC = -I./include
+
 ifeq ($(DEBUG_DEF),1)
 	DEBUG = -g -O0 -DDEBUG
 else
@@ -13,7 +15,7 @@ endif
 all: mfg-test
 
 mfg-test: $(sources) $(headers)
-	$(CC) -DAPP_VERSION='"$(APP_VERSION)"' $(CFLAGS) $(LDFLAGS) $(DEBUG) -o $@ $(sources)
+	$(CC) -DAPP_VERSION='"$(APP_VERSION)"' $(CFLAGS) $(INC) $(LDFLAGS) $(DEBUG) -o $@ $(sources)
 
 clean:
 	$(RM) mfg-test
